pamc/src/tests/sample_code/should_fail/rec_fun_same_param.ph
type Nat {
    .O: Nat,
    .S(n: Nat): Nat,
}

let x = fun x(-a: Nat): Nat {
    x(a)
};
